# mic

./: BUILD.bazel  LICENSE.md  WORKSPACE  deps.bzl
apps/mic/: BUILD.bazel  main.go
apps/mic/cmd/: BUILD.bazel  root.go  version.go
