load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mic_lib",
    srcs = ["main.go"],
    importpath = "mic/apps/mic",
    visibility = ["//visibility:private"],
    deps = ["//apps/mic/cmd"],
)

go_binary(
    name = "mic",
    embed = [":mic_lib"],
    visibility = ["//visibility:public"],
)
